//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Book {
  id Int [pk]
  quantity Int [not null]
  title String [not null]
  genre String [not null]
  author String [not null]
  price Float [not null]
  description String [not null]
  img String [not null]
  Seller Seller [not null]
  sellerId Int [not null]
}

Table Seller {
  id Int [pk]
  username String [not null]
  password String [not null]
  bankAccount Float [not null]
  type String [not null]
  companyName String [not null]
  books Book [not null]
  transactions Transaction [not null]
}

Table User {
  id Int [pk]
  username String [not null]
  password String [not null]
  balance Float [not null]
  type String [not null]
  shippingaddress String [not null]
  transactions Transaction [not null]
}

Table Transaction {
  id Int [pk]
  userId Int [not null]
  sellerId Int [not null]
  bookId Int [not null]
  quantity Int [not null]
  User User [not null]
  Seller Seller [not null]
}

Ref: Book.sellerId > Seller.id

Ref: Transaction.userId > User.id

Ref: Transaction.sellerId > Seller.id